# OpenML-Vizier-Converter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/: runids.csv
openMLVizierConverter/: __main__.py  converter.py  create_all_runs.py  print_error_causes.py  search_space.py
openMLVizierConverter/test/: test_determine_scale_type.py
